made changes in multiAgent cahtbot

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "919beb09",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "langgraph-project",
    "language": "python",
    "name": "python3"
   },
