--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -299,7 +299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langgraph-project",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
